Complete loading page to pdf and base API
